syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Cashier.Responses";

import "cashier_dtos.proto";
import "shared_dtos.proto";

package edoxa.services.cashier;

message FetchChallengePayoutsResponse {
  shared.dtos.StatusDto status = 1;
  repeated ChallengePayoutDto payouts = 2;
}

message FindChallengePayoutResponse {
  shared.dtos.StatusDto status = 1;
  ChallengePayoutDto payout = 2;
}

message CreateChallengePayoutResponse {
  shared.dtos.StatusDto status = 1;
  ChallengePayoutDto payout = 2;
}

message CreateTransactionResponse {
  shared.dtos.StatusDto status = 1;
  TransactionDto Transaction = 2;
}