syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Challenges.Enums";

package edoxa.services.challenges;

enum EnumChallengeState {
  ENUM_CHALLENGE_STATE_NONE = 0;
  ENUM_CHALLENGE_STATE_INSCRIPTION = 1;
  ENUM_CHALLENGE_STATE_IN_PROGRESS = 2;
  ENUM_CHALLENGE_STATE_ENDED = 4;
  ENUM_CHALLENGE_STATE_CLOSED = 8;
  ENUM_CHALLENGE_STATE_ALL = -1;
}

enum EnumChallengeType {
  ENUM_CHALLENGE_TYPE_NONE = 0;
  ENUM_CHALLENGE_TYPE_ALL = -1;
}